welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:9: error: type mismatch;
 found   : java.awt.Color
 required: String
  T(i)=getCouleurSol()
                    ^Array1:40: error: type mismatch;
 found   : String
 required: java.awt.Color
    setCouleurBrosse(c)
                     ^